[package]
name = "neoghq"
version = "0.1.0"
edition = "2024"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(coverage,coverage_nightly)',
] }

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
git2 = "0.18"
thiserror = "1.0"
url = "2.5.4"
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3.8"
